--- a/pelitaProject/portfolio/templates/portofolio/index.html
+++ b/pelitaProject/portfolio/templates/portofolio/index.html
@@ -394,7 +394,7 @@
               UD.PELITA berkomitmen membangun hubungan jangka panjang dengan petani dan peternak melalui
               program kemitraan yang berkelanjutan. Kami tidak hanya hadir sebagai penyedia produk, tetapi juga 
               sebagai mitra strategis dalam setiap proses usaha tani dan ternak. Mulai dari penyediaan kebutuhan 
-              pokok, bimbingan teknis, hingga kerja sama dalam skala kelompok—semuanya dirancang untuk 
+              pokok, bimbingan teknis, hingga kerja sama dalam skala kelompokï¿½semuanya dirancang untuk 
               mendukung kemandirian dan peningkatan hasil panen atau produksi ternak secara optimal.
             </p>
           </div>
