--- a/pelitaProject/portfolio/templates/portofolio/index.html
+++ b/pelitaProject/portfolio/templates/portofolio/index.html
@@ -2,11 +2,12 @@
 {% load static %}
 
 {% block style %}
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
 
     <link rel="icon" href="{% static 'assets/img/logo1-removebg-preview.png' %}">
-    <link href="{% static 'assets/img/apple-touch-icon.png" rel="apple-touch-icon' %}">
+    <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
