--- a/pelitaProject/portfolio/templates/portofolio/index.html
+++ b/pelitaProject/portfolio/templates/portofolio/index.html
@@ -22,7 +22,7 @@
     <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
     <!-- Main CSS File -->
-    <link href="{% static 'assets/css/main.css" rel="stylesheet' %}">
+    <link href="{% static 'assets/css/main.css' %}" rel="stylesheet">
 {% endblock style %}
 
 {% block content %}
@@ -33,7 +33,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo1-removebg-preview.png" alt="">
+        <img src="{% static 'assets/img/logo1-removebg-preview.png' %}" alt="">
         <h1 class="sitename">UD.PELITA</h1>
       </a>
 
@@ -44,6 +44,7 @@
           <li><a href="#services">Services</a></li>
           <!-- <li><a href="#portfolio">Portfolio</a></li> -->
           <li><a href="#team">Team</a></li>
+          <li><a href="https://preview--tani-ternak-kasir-pintar.lovable.app/login">Kasir</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
@@ -86,7 +87,7 @@
             </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/Gambar.png" class="img-fluid animated" alt="">
+            <img src="{% static 'assets/img/Gambar.png' %}" class="img-fluid animated" alt="">
           </div>
         </div>
       </div>
@@ -133,14 +134,14 @@
             }
           </script>
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-1.png' %}" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-2.png' %}" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-3.png' %}" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-4.png' %}" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-5.png' %}" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-6.png' %}" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-7.png' %}" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-8.png' %}" class="img-fluid" alt=""></div>
           </div>
         </div>
 
@@ -156,7 +157,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-6 position-relative order-lg-last" data-aos="fade-up" data-aos-delay="0">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/about.jpg' %}" class="img-fluid" alt="">
             <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
           </div>
 
@@ -212,7 +213,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/5ed8d19e24b74.jpg" class="img-fluid" alt="">
+                <img src="{% static 'assets/img/5ed8d19e24b74.jpg' %}" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -229,7 +230,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/pt-pupuk-kalimantan-timur-pupuk-kaltim-melalui-loyalty-progr-uhp4.jpg" class="img-fluid" alt="">
+                <img src="{% static 'assets/img/pt-pupuk-kalimantan-timur-pupuk-kaltim-melalui-loyalty-progr-uhp4.jpg' %}" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -246,7 +247,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/feedstuff.jpg" class="img-fluid" alt="">
+                <img src="{% static 'assets/img/feedstuff.jpg' %}" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -281,7 +282,7 @@
           <!-- <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="600">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-5.jpg" class="img-fluid" alt="">
+                <img src="{% static 'assets/img/services-5.jpg' %}" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -299,7 +300,7 @@
           <!-- <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="700">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/services-6.jpg" class="img-fluid" alt="">
+                <img src="{% static 'assets/img/services-6.jpg' %}" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon">
@@ -335,7 +336,7 @@
 
         <div class="row gy-4 align-items-center features-item">
           <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
-            <img src="assets/img/antarafoto-realisasi-penyaluran-pupuk-subsidi-di-aceh-310723-syf-6_ratio-16x9.jpg" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/antarafoto-realisasi-penyaluran-pupuk-subsidi-di-aceh-310723-syf-6_ratio-16x9.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-md-7" data-aos="fade-up" data-aos-delay="100">
             <h3> Akses Produk Subsidi Langsung</h3>
@@ -353,7 +354,7 @@
 
         <div class="row gy-4 align-items-center features-item">
           <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="assets/img/02-18-750x450.jpg" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/02-18-750x450.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 order-2 order-md-1" data-aos="fade-up" data-aos-delay="200">
             <h3>Layanan Konsultasi Gratis</h3>
@@ -368,7 +369,7 @@
 
         <div class="row gy-4 align-items-center features-item">
           <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out">
-            <img src="assets/img/04102024_pakan_Ternak.jpg" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/04102024_pakan_Ternak.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-md-7" data-aos="fade-up">
             <h3>Produk Lengkap dan Terjamin</h3>
@@ -384,7 +385,7 @@
 
         <div class="row gy-4 align-items-center features-item">
           <div class="col-md-5 order-1 order-md-2 d-flex align-items-center" data-aos="zoom-out">
-            <img src="assets/img/istockphoto-1323264565-170667a.jpg" class="img-fluid" alt="">
+            <img src="{% static 'assets/img/istockphoto-1323264565-170667a.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 order-2 order-md-1" data-aos="fade-up">
             <h3>Kemitraan Jangka Panjang untuk Petani & Peternak</h3>
