--- a/pelitaProject/kasir/templates/kasir/index.html
+++ b/pelitaProject/kasir/templates/kasir/index.html
@@ -1,1 +1,8 @@
 {% extends "base.html"%}
+{% load static %}
+
+{% block style %}
+{% endblock style %}
+
+{% block content %}
+{% endblock content %}
