--- a/pelitaProject/kasir/templates/kasir/index.html
+++ b/pelitaProject/kasir/templates/kasir/index.html
@@ -7,7 +7,7 @@
 <title>{{title}}</title>
 <!-- Bootstrap 5 CDN -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="" rel="stylesheet">
+<link href="{% static 'css/login.css' %}" rel="stylesheet">
 {% endblock style %}
 
 {% block content %}
