--- a/pelitaProject/kasir/templates/kasir/cashierDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/cashierDashboard.html
@@ -20,11 +20,11 @@
   
     <div class="card mx-auto">
       <h5 class="text-start mb-4">Login</h5>
-      <form method="POST" action="{% url 'login'%}">
+      <form method="POST" action="">
         {% csrf_token %}
         <div class="mb-3 text-start">
           <label for="email" class="form-label">Username</label>
-          <input type="text" class="form-control" id="email" name="username" placeholder="Masukkan email">
+          <input type="text" class="form-control" id="email" placeholder="Masukkan email">
         </div>
         <div class="mb-4 text-start position-relative">
           <label for="password" class="form-label">Password</label>
