--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -28,7 +28,7 @@
         Tani-Ternak Kasir
       </div>
       <nav class="mt-6 flex flex-col space-y-1 px-2">
-        <a href="/DashboardKasir.html" class="flex items-center space-x-3 px-3 py-2 rounded bg-[#0041A8]">
+        <a href="{% url 'dashboard' %}" class="flex items-center space-x-3 px-3 py-2 rounded bg-[#0041A8]">
           <i class="fas fa-th-large text-sm"></i>
           <span class="text-sm">Dashboard</span>
         </a>
@@ -38,7 +38,7 @@
         </a>
       </nav>
     </div>
-    <a href="index.html" class="px-6 py-3 border-t border-[#0041A8] flex items-center space-x-2 text-sm cursor-pointer hover:bg-[#0041A8]">
+    <a href="{% url 'logout' %}" class="px-6 py-3 border-t border-[#0041A8] flex items-center space-x-2 text-sm cursor-pointer hover:bg-[#0041A8]">
       <i class="fas fa-sign-out-alt"></i>
       <span>Keluar</span>
     </a>
@@ -188,5 +188,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="{% static 'js/script.js' %}}"></script>
+<script src="{% static 'js/script.js' %}"></script>
 {% endblock content %}
