--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -24,7 +24,7 @@
   <!-- Sidebar -->
   <aside class="bg-[#0052CC] w-56 flex flex-col justify-between text-white">
     <div>
-      <div class="font-bold text-white text-lg px-6 py-5 border-b border-[#0041A8]">
+      <div class="font-bold text-white text-lg px-6 border-b border-[#0041A8]" style="padding-top:20px; padding-bottom:20px;">
         Tani-Ternak Kasir
       </div>
       <nav class="mt-6 flex flex-col space-y-1 px-2">
