--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -28,7 +28,7 @@
         Tani-Ternak Kasir
       </div>
       <nav class="mt-6 flex flex-col space-y-1 px-2">
-        <a href="{% url 'dashboard' %}" class="flex items-center space-x-3 px-4 py-2 rounded bg-[#0041A8]">
+        <a href="{% url 'admindashboard' %}" class="flex items-center space-x-3 px-4 py-2 rounded bg-[#0041A8]">
           <i class="fas fa-th-large text-sm"></i>
           <span class="text-sm">Dashboard</span>
         </a>
