--- a/pelitaProject/kasir/templates/kasir/cashierDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/cashierDashboard.html
@@ -28,29 +28,13 @@
         Tani-Ternak Kasir
       </div>
       <nav class="mt-6 flex flex-col space-y-1 px-2">
-        <a href="{% url 'kasirdashboard' %}" class="flex items-center space-x-3 px-4 py-2 rounded bg-[#0041A8]">
+        <a href="{% url 'kasirdashboard' %}" class="flex items-center space-x-3 px-3 py-2 rounded bg-[#0041A8]">
           <i class="fas fa-th-large text-sm"></i>
           <span class="text-sm">Dashboard</span>
         </a>
-        <a href="/kasir2.html" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
+        <a href="/kasir2.html" class="flex items-center space-x-3 px-3 py-2 rounded hover:bg-[#0041A8]">
           <i class="fas fa-cash-register text-sm"></i>
-          <span class="text-sm">Kasir</span>
-        </a>
-        <a href="#" aria-current="page" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8] font-semibold">
-          <i class="fas fa-box text-sm"></i>
-          <span class="text-sm">Produk</span>
-        </a>
-        <a href="#" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
-          <i class="fas fa-file-alt text-sm"></i>
-          <span class="text-sm">Laporan</span>
-        </a>
-        <a href="#" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
-          <i class="fas fa-users text-sm"></i>
-          <span class="text-sm">Pelanggan</span>
-        </a>
-        <a href="#" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
-          <i class="fas fa-cog text-sm"></i>
-          <span class="text-sm">Pengaturan</span>
+          <span class="text-sm">Cashier</span>
         </a>
       </nav>
     </div>
@@ -58,7 +42,7 @@
       <i class="fas fa-sign-out-alt"></i>
       <span>Keluar</span>
     </a>
-  </aside>
+</aside>
 
   <!-- Overlay for Mobile -->
   <div id="overlay" class="overlay" onclick="toggleSidebar()"></div>
