--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -70,9 +70,9 @@
       <div class="text-sm font-normal text-[#1E1E1E]">Dashboard</div>
       <div class="flex items-center space-x-2">
         <div class="w-8 h-8 rounded-full bg-[#0052CC] flex items-center justify-center text-white font-semibold text-xs select-none">
-          AT
+          AD
         </div>
-        <span class="text-xs text-[#1E1E1E] font-normal">Admin Tani</span>
+        <span class="text-xs text-[#1E1E1E] font-normal">{{user}}</span>
       </div>
     </header>
 
