--- a/pelitaProject/kasir/templates/kasir/kasir.html
+++ b/pelitaProject/kasir/templates/kasir/kasir.html
@@ -31,7 +31,7 @@
                   <i class="fas fa-th-large text-sm"></i>
                   <span class="text-sm">Dashboard</span>
                 </a>
-                <a href="/kasir2.html" class="flex items-center space-x-3 px-3 py-2 rounded bg-[#0041A8]">
+                <a href="{% url 'kasir' %}" class="flex items-center space-x-3 px-3 py-2 rounded bg-[#0041A8]">
                   <i class="fas fa-cash-register text-sm"></i>
                   <span class="text-sm">Cashier</span>
                 </a>
