--- a/pelitaProject/kasir/static/css/style.css
+++ b/pelitaProject/kasir/static/css/style.css
@@ -47,3 +47,76 @@ body {
     display: block;
   }
 }
+
+body {
+    background: #f8f9fa;
+    font-family: 'Inter', sans-serif;
+}
+/* .sidebar {
+    background-color: #0d6efd;
+    min-height: 100vh;
+    color: white;
+    width: 250px;
+}
+.sidebar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    display: block;
+    border-radius: 8px;
+}
+.sidebar a.active, .sidebar a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+} */
+.content {
+    padding: 20px;
+}
+.card-product {
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 10px;
+}
+.price {
+    color: #0d6efd;
+    font-weight: bold;
+}
+.btn-primary {
+    background: orange;
+    border: none;
+}
+.btn-primary:hover {
+    background: darkorange;
+}
+.product-stock {
+    font-size: 0.8rem;
+    color: grey;
+    float: right;
+}
+@media (max-width: 400px) {
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -250px;
+    width: 200px;
+    height: 100%;
+    transition: all 0.3s;
+    z-index: 1000;
+}
+.sidebar.show {
+    left: 0;
+}
+.overlay {
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,0.5);
+    z-index: 999;
+}
+.overlay.show {
+    display: block;
+}
+}
