--- a/pelitaProject/kasir/static/css/kasir.css
+++ b/pelitaProject/kasir/static/css/kasir.css
@@ -21,6 +21,28 @@ body {
 .content {
   padding: 20px;
 }
+.card-product {
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 10px;
+}
+.price {
+    color: #0d6efd;
+    font-weight: bold;
+}
+.btn-primary {
+    background: orange;
+    border: none;
+}
+.btn-primary:hover {
+    background: darkorange;
+}
+.product-stock {
+    font-size: 0.8rem;
+    color: grey;
+    float: right;
+}
 
 @media (max-width: 400px) {
   .sidebar {
