--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -25,14 +25,14 @@
   <aside class="bg-[#0052CC] w-56 flex flex-col justify-between text-white">
     <div>
       <div class="font-bold text-white text-lg px-6 border-b border-[#0041A8]" style="padding-top:20px; padding-bottom:20px;">
-        Tani-Ternak Kasir
+        PELITAKAS
       </div>
       <nav class="mt-6 flex flex-col space-y-1 px-2">
         <a href="{% url 'admindashboard' %}" class="flex items-center space-x-3 px-4 py-2 rounded bg-[#0041A8]">
           <i class="fas fa-th-large text-sm"></i>
           <span class="text-sm">Dashboard</span>
         </a>
-        <a href="/kasir2.html" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
+        <a href="{% url 'adminKasir' %}" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
           <i class="fas fa-cash-register text-sm"></i>
           <span class="text-sm">Kasir</span>
         </a>
