--- a/pelitaProject/kasir/templates/kasir/cashierDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/cashierDashboard.html
@@ -25,7 +25,7 @@
   <aside class="bg-[#0052CC] w-56 flex flex-col justify-between text-white">
     <div>
       <div class="font-bold text-white text-lg px-6 border-b border-[#0041A8]" style="padding-top:20px; padding-bottom:20px;">
-        Tani-Ternak Kasir
+        PELITAKAS
       </div>
       <nav class="mt-6 flex flex-col space-y-1 px-2">
         <a href="{% url 'kasirdashboard' %}" class="flex items-center space-x-3 px-3 py-2 rounded bg-[#0041A8]">
@@ -175,7 +175,7 @@
                 </tbody>
               </table>
               <div class="d-grid">
-                <a href="kasir2.html" class="btn btn-primary">Buat Transaksi Baru</a>
+                <a href="{% url 'kasir' %}" class="btn btn-primary">Buat Transaksi Baru</a>
               </div>
             </div>
           </div>
