--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -191,7 +191,7 @@
                 </tbody>
               </table>
               <div class="d-grid">
-                <a href="kasir2.html" class="btn btn-primary">Buat Transaksi Baru</a>
+                <a href="{% url 'adminKasir' %}" class="btn btn-primary">Buat Transaksi Baru</a>
               </div>
             </div>
           </div>
