--- a/pelitaProject/kasir/templates/kasir/kasirAdmin.html
+++ b/pelitaProject/kasir/templates/kasir/kasirAdmin.html
@@ -36,11 +36,11 @@
           <i class="fas fa-cash-register text-sm"></i>
           <span class="text-sm">Kasir</span>
         </a>
-        <a href="#" aria-current="page" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8] font-semibold">
+        <a href="{% url 'product' %}" aria-current="page" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8] font-semibold">
           <i class="fas fa-box text-sm"></i>
           <span class="text-sm">Produk</span>
         </a>
-        <a href="#" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
+        <a href="{% url 'laporan' %}" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
           <i class="fas fa-file-alt text-sm"></i>
           <span class="text-sm">Laporan</span>
         </a>
@@ -79,7 +79,7 @@
                 <div class="text-sm font-normal text-[#1E1E1E]">Cashier</div>
                 <div class="flex items-center space-x-2">
                   <div class="w-8 h-8 rounded-full bg-[#0052CC] flex items-center justify-center text-white font-semibold text-xs select-none">
-                    KS
+                    AD
                   </div>
                   <span class="text-xs text-[#1E1E1E] font-normal">{{user}}</span>
                 </div>
