--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -40,7 +40,7 @@
           <i class="fas fa-box text-sm"></i>
           <span class="text-sm">Produk</span>
         </a>
-        <a href="#" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
+        <a href="{% url 'laporan' %}" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
           <i class="fas fa-file-alt text-sm"></i>
           <span class="text-sm">Laporan</span>
         </a>
