--- a/pelitaProject/kasir/templates/kasir/laporan.html
+++ b/pelitaProject/kasir/templates/kasir/laporan.html
@@ -35,7 +35,7 @@
           <i class="fas fa-cash-register text-sm"></i>
           <span class="text-sm">Kasir</span>
         </a>
-        <a href="#" aria-current="page" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8] font-semibold">
+        <a href="{% url 'product' %}" aria-current="page" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8] font-semibold">
           <i class="fas fa-box text-sm"></i>
           <span class="text-sm">Produk</span>
         </a>
