--- a/pelitaProject/kasir/templates/kasir/product.html
+++ b/pelitaProject/kasir/templates/kasir/product.html
@@ -35,11 +35,11 @@
           <i class="fas fa-cash-register text-sm"></i>
           <span class="text-sm">Kasir</span>
         </a>
-        <a href="#" aria-current="page" class="flex items-center space-x-3 px-4 py-2 rounded bg-[#0041A8] font-semibold">
+        <a href="{% url 'product' %}" aria-current="page" class="flex items-center space-x-3 px-4 py-2 rounded bg-[#0041A8] font-semibold">
           <i class="fas fa-box text-sm"></i>
           <span class="text-sm">Produk</span>
         </a>
-        <a href="#" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
+        <a href="{% url 'laporan' %}" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
           <i class="fas fa-file-alt text-sm"></i>
           <span class="text-sm">Laporan</span>
         </a>
