--- a/pelitaProject/kasir/templates/kasir/index.html
+++ b/pelitaProject/kasir/templates/kasir/index.html
@@ -46,6 +46,9 @@
         <div class="d-grid">
           <button type="submit" class="btn btn-login">Login</a></button>
         </div>
+        <a href="{% url 'portofolio' %}" class="btn btn-link mt-3">
+          <i class="fa-solid fa-arrow-left"></i> Back to Portfolio
+        </a>
 
       </form>
     </div>
