--- a/pelitaProject/kasir/templates/kasir/kasirAdmin.html
+++ b/pelitaProject/kasir/templates/kasir/kasirAdmin.html
@@ -44,7 +44,7 @@
           <i class="fas fa-file-alt text-sm"></i>
           <span class="text-sm">Laporan</span>
         </a>
-        <a href="#" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
+        <a href="{% url 'pengaturan' %}" class="flex items-center space-x-3 px-4 py-2 rounded hover:bg-[#0041A8]">
           <i class="fas fa-cog text-sm"></i>
           <span class="text-sm">Pengaturan</span>
         </a>
@@ -153,5 +153,5 @@
             {% endfor %}
     	];
     </script>
-    <script src="{% static 'js/kasir.js' %}"></script>
+    <script src="{% static 'js/adminKasir.js' %}"></script>
 {% endblock content %}
