--- a/pelitaProject/kasir/templates/kasir/index.html
+++ b/pelitaProject/kasir/templates/kasir/index.html
@@ -24,7 +24,7 @@
         {% csrf_token %}
         <div class="mb-3 text-start">
           <label for="email" class="form-label">Username</label>
-          <input type="text" class="form-control" id="email" name="username" placeholder="Masukkan email">
+          <input type="text" class="form-control" id="email" name="username" placeholder="Masukkan Username">
         </div>
         <div class="mb-4 text-start position-relative">
           <label for="password" class="form-label">Password</label>
