--- a/pelitaProject/MyPortofolio/templates/MyPortofolio/index.html
+++ b/pelitaProject/MyPortofolio/templates/MyPortofolio/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{{title}}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="{% static 'MyPortofolio/images/DALL·E 2025-01-07 21.46.46 - A clean and professional minimalist logo design featuring the letters 'QW' in a bold, modern black font centered on a plain white background. The typo.webp' %}">
+	<link rel="icon" type="image/png" href="{% static "MyPortofolio/images/DALL·E 2025-01-07 21.46.46 - A clean and professional minimalist logo design featuring the letters 'QW' in a bold, modern black font centered on a plain white background. The typo.webp" %}">
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
